Actions
Bug #9727
closedArray#reject aborts with callcc
Bug #9727:
Array#reject aborts with callcc
Updated by nobu (Nobuyoshi Nakada) over 12 years ago
- Status changed from Open to Closed
- % Done changed from 0 to 100
Applied in changeset r45562.
array.c: maybe shared array
- array.c (ary_reject): may be turned into a shared array during
the given block. [ruby-dev:48101] [Bug #9727]
Updated by usa (Usaku NAKAMURA) over 12 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED to 2.0.0: DONE, 2.1: REQUIRED
Backported into ruby_2_0_0 at r46155.
Updated by nagachika (Tomoyuki Chikanaga) over 12 years ago
- Backport changed from 2.0.0: DONE, 2.1: REQUIRED to 2.0.0: DONE, 2.1: DONE
r45562 was backported into ruby_2_1 branch at r46188.
Actions